--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cli-table": "^0.3.1",
-    "node-fetch": "^2.6.1",
-    "yargs": "^15.4.1"
+    "commander": "^6.1.0",
+    "node-fetch": "^2.6.1"
   }
 }
